Project

General

Profile

Actions

Bug #23358

closed

vstart.sh gives obscure error of dashboard dependencies missing

Added by Luis Henriques about 6 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Here's the command line I'm using:

MON=1 OSD=3 MDS=3 ../src/vstart.sh -x -N -i 192.168.155.1 --multimds 2 -b

And the error:

/home/miguel/dev/ceph/ceph/build/bin/ceph -c /home/miguel/dev/ceph/ceph/build/ceph.conf -k /home/miguel/dev/ceph/ceph/build/keyring restful create-key admin -o /tmp/tmp.EiBEB4KsYf 
/home/miguel/dev/ceph/ceph/build/bin/ceph -c /home/miguel/dev/ceph/ceph/build/ceph.conf -k /home/miguel/dev/ceph/ceph/build/keyring mgr module enable dashboard_v2 
Error ENOENT: all mgr daemons do not support module 'dashboard_v2', pass --force to force enablement

If I edit vstart.sh and add a '--force', I'll get:
/home/miguel/dev/ceph/ceph/build/bin/ceph -c /home/miguel/dev/ceph/ceph/build/ceph.conf -k /home/miguel/dev/ceph/ceph/build/keyring mgr module enable dashboard_v2 --force 
/home/miguel/dev/ceph/ceph/build/bin/ceph -c /home/miguel/dev/ceph/ceph/build/ceph.conf -k /home/miguel/dev/ceph/ceph/build/keyring tell mgr dashboard set-login-credentials 
admin admin 
no valid command found; 10 closest matches:
restful list-keys
restful delete-key <key_name>
influx self-test
influx send
restful create-key <key_name>
prometheus self-test
balancer execute <plan>
balancer dump <plan>
influx config-show
influx config-set <key> <value>
Error EINVAL: invalid command

Actions #1

Updated by Sage Weil about 6 years ago

  • Status changed from New to 12
  • Priority changed from Normal to High

The problem appears to be that the 'vstart' or 'vstart-base' build target isn't sufficient to build the dashboard bits?

Actions #2

Updated by Luis Henriques about 6 years ago

Note that I did a full 'make', not a 'make vstart'.

Actions #3

Updated by Jeff Layton about 6 years ago

Passing in MGR=0 seems to be a workaround for now.

Actions #4

Updated by Jeff Layton about 6 years ago

Ahh, there are some new package dependencies (at least in Fedora 27). Try running install-deps.sh again. I needed:

python-bcrypt
cherrypy

Once I installed those, vstart worked again. YMMV of course...

Actions #5

Updated by Luis Henriques about 6 years ago

Ok, I confirm that installing the extra packages did fix the issue (in my case only python2-bcrypt). Thanks, Jeff! I'm ok closing this bug as I should have run the install-deps. But maybe the error could be improved a bit too.

Actions #6

Updated by John Spray about 6 years ago

  • Subject changed from vstart.sh cluster fails to start in current master to vstart.sh gives obscure error of dashboard dependencies missing
  • Status changed from 12 to Fix Under Review
  • Assignee set to John Spray
  • Priority changed from High to Normal

Yes, we can make this message better:
https://github.com/ceph/ceph/pull/20921

Actions #7

Updated by Sage Weil almost 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF