mgr: improve reporting on unloadable modules

Previously, a module that failed to load at all (for
example due to an import error at module scope) would
be missing from the reports to the monitor, and would
result in enigmatic messages about a module not being
present on all mgrs.

Fixes: http://tracker.ceph.com/issues/23358
Signed-off-by: John Spray <john.spray@redhat.com>